<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main"
    tools:context=".LoveResultProcess" >

    <TextView
        android:id="@+id/textview_topbar_love_process"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/app_name"
        android:textSize="20sp" />

    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:gravity="center_horizontal"
    >
    <TextView
        android:id="@+id/textview_youhave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/you_have"
        android:textSize="30sp" 
   />

    <TextView
        android:id="@+id/textview_love_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="0%"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textview_bonding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/bonding"
        android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>